--- a/findly-builder/src/app/components/annotool/components/user-guide/user-guide.component.html
+++ b/findly-builder/src/app/components/annotool/components/user-guide/user-guide.component.html
@@ -4,7 +4,8 @@
     <img class="closeCross" src="assets/images/close.svg" (click)="close()">
   </div>
   <div class="modal-body">
-    <div class="desc-text">Annotate the document to train the system in extracting the content. To annotate, select the text and tag it as Heading, Header, Footer or Ignored Text.</div>
+    <div class="desc-text">Annotate the document to train the system in extracting the content. 
+      <br/>To annotate, select the text and tag it as Heading, Header, Footer or Ignored Text.</div>
     <div class="small-text">Note: Annotating for a few pages would be sufficient</div>
     <div class="box-content">
         <div class="content">
@@ -18,12 +19,12 @@
           </div>
           <div class="heading">Automation</div>
           <div class="desc-info">We’re breaking out of the categories of see, hear and recommend. Pioneering organizations have already evolved from automation to value creation, and are expecting radical changes in business models over the coming years. </div>
+          <a href="http://kore.ai" target="_blank" rel="noopener noreferrer" class="learn-more-link">Learn more</a>
         </div>
-    </div>
-    <a href="http://kore.ai" target="_blank" rel="noopener noreferrer" class="learn-more-link">Learn more</a>
+    </div>    
   </div>
   <div class="modal-footer">    
-    <button class="kr-sg-button-primary btn_md ml-3" (click)="getStarted()">Get Started</button>
-    <button class="kr-sg-button-secondary btn_md mr-2" (click)="close()">Cancel</button>
+    <button class="kr-sg-button-primary btn_lg" (click)="getStarted()">Get Started</button>
+    <button class="kr-sg-button-secondary btn_lg" (click)="close()">Cancel</button>
   </div>
 </div>
