--- a/findly-builder/src/app/scss/variables/variables.scss
+++ b/findly-builder/src/app/scss/variables/variables.scss
@@ -25,6 +25,7 @@ $white:var(--white-color);
 $buttonhoverBgColor:var(--primary-color1);
 $background-slider-active:#009dab;
 $hoverColor:#018490;
+$hoverBlue:#0D6EFD;
 $lightGreen:#C8E7EA;
 $borderRadius:3px;
 $borderGray: #dddddd;
